# BookShopStudy

./: pyproject.toml
.github/workflows/: python.yml
shop/: __init__.py
tests/: test_shop.py
